Fixing Cursor on small screens

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -33,4 +33,8 @@
     .row {
         margin-top: 5em;
     }
+
+    #cursor {
+        display: none;
+    }
 }
